--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -4,28 +4,23 @@
 }
 
 
-img.sidebar-logo {
-    position: relative;
-}
-
 img.sidebar-logo::after {
-    content: "Designed by Jonathan Lin\njlin1212@umd.edu"; 
+    content: "Designed by Jonathan Lin"; 
+    background-color: #333;
+    color: #fff;
+    padding: 5px;
     position: absolute;
-    bottom: 100%; 
-    left: 50%; 
-    transform: translateX(-50%); 
-    background-color: #333; 
-    color: white; 
-    padding: 5px; 
-    white-space: pre; 
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
     opacity: 0;
     visibility: hidden;
-    transition: opacity 0.3s ease;
-    pointer-events: none;
+    transition: opacity 0.3s;
 }
 
 img.sidebar-logo:hover::after {
     opacity: 1;
     visibility: visible;
 }
+
 
