Update custom.css testing hover feature

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -8,8 +8,7 @@ img.sidebar-logo {
 }
 img.sidebar-logo::after {
     content: "Designed by Jonathan Lin";
-    font-size: 0px;
-    visibility: hidden;
+    font-size: 80px;
     color: red;
     display: block;
     position: absolute;
@@ -20,9 +19,9 @@ img.sidebar-logo::after {
     text-align: center;
     transition: font-size 0.5s ease, visibility 0.5s ease;
 }
-
+/* 
 img.sidebar-logo:hover::after {
     font-size: 100px;
     visibility: visible;
 }
-
+ */
