Update custom.css testing visibility options.
The template seems to be overriding these changes. Testing alternatives.

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -8,6 +8,7 @@ img.sidebar-logo {
 }
 img.sidebar-logo::after {
     content: "Designed by Jonathan Lin";
+    visibility: visible;
     font-size: 80px;
     color: red;
     display: block;
