--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -4,12 +4,13 @@
 }
 
 .sidebar-logo-container::after {
-  content: "(Logo by Jonathan Lin)";
+  content: "Logo by Jonathan Lin \a https://jlin1212.github.io/";
   font-size: 8pt;
   color: #222;
   display: block;
   text-align: right;
   transition: 0.4s;
+  white-space: pre;
   opacity: 0;
 }
 
