--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -3,8 +3,8 @@
     font-weight: bold;
 }
 
-/* .sidebar-logo-container::after {
-  content: "Logo by Jonathan Lin \a https://jlin1212.github.io/";
+.sidebar-logo-container::after {
+  content: "Logo by Jonathan Lin \a jlin1212@termpail.umd.edu";
   font-size: 8pt;
   color: #222;
   display: block;
@@ -17,18 +17,4 @@
 .sidebar-logo-container:hover::after {
   opacity: 1;
 }
- */
 
-.sidebar-logo-container a {
-  font-size: 8pt;
-  color: #222;
-  display: block;
-  text-align: right;
-  opacity: 0;
-  transition: opacity 0.4s;
-  white-space: pre;
-}
-
-.sidebar-logo-container:hover a {
-  opacity: 1;
-}
